[issue #350] Home page created.

--- a/arability/app/views/pages/home.html.erb
+++ b/arability/app/views/pages/home.html.erb
@@ -196,30 +196,22 @@
     }
     </style>
 
-    <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="../assets/ico/favicon.png">
-
-
     <!-- Carousel
     ================================================== -->
     <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
         <div class="item active">
-          <img src="../assets/slide-02.jpg" alt="">
+          <img src="../assets/home_caro1.png" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Arability</h1>
-              <p class="lead">Contribute to Arability and play our game!</p>
-              <a class="btn btn-large btn-primary" href="/game">Play now!</a>
+              <h1><%= t(:caro1h) %></h1>
+              <p class="lead"><%= t(:caro1b) %></p>
+              <a class="btn btn-primary" href="#more"><%= t(:more) %></a>
             </div>
           </div>
         </div>
         <div class="item">
-          <img src="../assets/slide-02.jpg" alt="">
+          <img src="../assets/home_caro2.png" alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>Another example headline.</h1>
@@ -243,33 +235,29 @@
       <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
     </div><!-- /.carousel -->
 
-
-
-    <!-- Marketing messaging and featurettes
-    ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
-
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="span4">
-          <img class="img-circle" data-src="holder.js/140x140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <img src="../assets/game.png" alt="">
+          <h2><%= t(:feat1h) %></h2>
+          <p><%= t(:feat1b) %></p>
+          <p><a class="btn" href="/game"><%= t(:play) %> &raquo;</a></p>
         </div><!-- /.span4 -->
-        <div class="span4">
-          <img class="img-circle" data-src="holder.js/140x140">
-          <h2>Heading</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div><!-- /.span4 -->
-        <div class="span4">
-          <img class="img-circle" data-src="holder.js/140x140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+         <div class="span4">
+          <img src="../assets/up.png" alt="">
+          <h2><%= t(:feat2h) %></h2>
+          <p><%= t(:feat2b) %></p>
+          <p><a class="btn" href="/gamers/sign_up"><%= t(:sign_up) %> &raquo;</a></p>
+        </div>
+        <!-- /.span4 -->
+          <div class="span4">
+          <img src="../assets/developers.png" alt="">
+          <h2><%= t(:feat3h) %></h2>
+          <p><%= t(:feat3b) %></p>
+
+          <p><a class="btn" href="/developers"><%= t(:backend) %> &raquo;</a></p>
         </div><!-- /.span4 -->
       </div><!-- /.row -->
 
@@ -278,27 +266,22 @@
 
       <hr class="featurette-divider">
 
-      <div class="featurette">
-        <img class="featurette-image pull-right" src="../assets/img/examples/browser-icon-chrome.png">
-        <h2 class="featurette-heading">First featurette headling. <span class="muted">It'll blow your mind.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+      <div class="featurette"  id="more">
+        <img class="featurette-image pull-right" src="../assets/gear.png">
+        <h2 class="featurette-heading"><%= t(:backend) %></h2>
+        <p class="lead"> <span class="muted"><%= t(:featdevh1) %></span><br><%= t(:featdevb1) %></p>
+        <p class="lead"> <span class="muted"><%= t(:featdevh2) %></span><br><%= t(:featdevb2) %></p>
       </div>
 
       <hr class="featurette-divider">
 
       <div class="featurette">
-        <img class="featurette-image pull-left" src="../assets/img/examples/browser-icon-firefox.png">
-        <h2 class="featurette-heading">Oh yeah, it's that good. <span class="muted">See for yourself.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <img class="featurette-image pull-left" src="../assets/gamer.png">
+        <h2 class="featurette-heading"><%= t(:gamers) %></h2>
+        <p class="lead"> <span class="muted"><%= t(:featgameh1) %></span><br><%= t(:featgameb1) %></p>
+        <p class="lead"> <span class="muted"><%= t(:featdevh2) %></span><br><%= t(:featgameb2) %></p>
       </div>
 
-      <hr class="featurette-divider">
-
-      <div class="featurette">
-        <img class="featurette-image pull-right" src="../assets/img/examples/browser-icon-safari.png">
-        <h2 class="featurette-heading">And lastly, this one. <span class="muted">Checkmate.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      </div>
 
       <hr class="featurette-divider">
 
@@ -307,31 +290,9 @@
 
       <!-- FOOTER -->
       <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2013 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; <%= t(:developed_by) %></p>
       </footer>
 
     </div><!-- /.container -->
-
-
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../assets/js/jquery.js"></script>
-    <script src="../assets/js/bootstrap-transition.js"></script>
-    <script src="../assets/js/bootstrap-alert.js"></script>
-    <script src="../assets/js/bootstrap-modal.js"></script>
-    <script src="../assets/js/bootstrap-dropdown.js"></script>
-    <script src="../assets/js/bootstrap-scrollspy.js"></script>
-    <script src="../assets/js/bootstrap-tab.js"></script>
-    <script src="../assets/js/bootstrap-tooltip.js"></script>
-    <script src="../assets/js/bootstrap-popover.js"></script>
-    <script src="../assets/js/bootstrap-button.js"></script>
-    <script src="../assets/js/bootstrap-collapse.js"></script>
-    <script src="../assets/js/bootstrap-carousel.js"></script>
-    <script src="../assets/js/bootstrap-typeahead.js"></script>
-    
-    <script src="../assets/js/holder/holder.js"></script>
 
 <% end %>
