--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Arability</title>
+  <link rel="shortcut icon" href="/assets/logo.png">
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= stylesheet_link_tag "games", :media => "all" %>
   <%= stylesheet_link_tag "pages", :media => "all" %>
