[#371][WIP] aligned code view in edit.html

--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -140,8 +140,10 @@
 
         <div class="Twitter" style="width: 344px;margin-right: auto;margin-left: auto;">
           <% if Authentication.exists?(gamer_id: current_gamer.id, provider: "twitter") %>
-          <h5><img alt="Twitter" class="border-none" src="/assets/twitter.png" width="100" /><%=
-            t(:already_connected) %></h5>
+          <h5>
+            <img alt="Twitter" class="border-none" src="/assets/twitter.png" width="100" />
+            <%= t(:already_connected) %>
+          </h5>
           <%= link_to t(:remove_connection), "/authentications/remove_twitter_connection" %>
           <% else %>
           <img alt="Twitter" class="border-none" src="/assets/twitter.png" width="100px" height="100px" />
@@ -150,6 +152,7 @@
           </span>
           <% end %>
         </div>
+        
       </div>
     </div>
 <% end %>
