--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -187,6 +187,7 @@
 							</div>
 
 							<div id="buttons<%= synonym.id %>" class="pull-right">
+								<% if @votes[synonym.id] != nil %>
 								<button id="bstats<%= synonym.id %>" class="btn btn-mini" style="display:inline;" data-toggle="collapse" href="#collapse<%= synonym.id %>" onClick="reduce_div_height()">
 									    <span><%=t(:view_stats)%></span>
      									<span style="display:none"><%=t(:hide_stats)%></span>
@@ -196,6 +197,18 @@
 												}
 		                  </script>
 								</button>
+								<%else%>
+								<button id="bstats<%= synonym.id %>" class="btn btn-mini btn-danger disabled why-disabled" style="display:inline;">
+								<%=t(:view_stats)%>
+								</button>
+								<% end %>
+										<script type="text/javascript">
+											$(".why-disabled").popover({
+											    placement: 'left',
+											    content : "Sorry, no one voted for this synonym yet!",
+											    trigger: "hover"
+											});
+	                  </script>
 								<%= button_tag(:type => "submit", :class => "btn btn-mini",:style => "display:inline;") do %>
 								<%= link_to t(:add_to_project), {action: "add_word", controller: "projects", project_id: @project_id, synonym_id: synonym.id, keyword: @search_keyword}, {style:"color:#000000", class: "css_class"}  %>
 								<% end %>
