--- a/arability/app/views/projects/load_synonyms.js.erb
+++ b/arability/app/views/projects/load_synonyms.js.erb
@@ -9,6 +9,7 @@ update_synonym_list(synonym_names, synonym_ids);
 
 function update_synonym_list(synonym_names, synonym_ids){
 	if(synonym_names.length == 0){
+		$('#add_button').attr("disabled", true);
 		<% if I18n.locale == :en %>
 			$("#selected_synonym").html("<option value='0'>no translations</option>");
 		<% else %>
@@ -17,6 +18,7 @@ function update_synonym_list(synonym_names, synonym_ids){
 		document.getElementById("selected_synonym").disabled=true;
 	}
 	else {
+		$('#add_button').attr("disabled", false);
 		$("#selected_synonym").html("");
 		document.getElementById("selected_synonym").disabled=false;
 		for(var i = 0; i < synonym_names.length; i++){
