--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -54,9 +54,9 @@
   <% end %>
   
   <% if I18n.locale == :ar %>
-    <a class="btn pull-left" class="btn-danger" href="/developers/projects/<%= project1.id %>/destroy"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
+   <a style="margin-left : 6px;" class="btn pull-left btn-danger" href="/developers/projects/<%= project1.id %>/destroy" onclick="return confirm('<%=t(:confirm)%>');"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
   <% else %>
-    <a class="btn pull-right" class="btn-danger" href="/developers/projects/<%= project1.id %>/destroy"></i><%= t(:projects_index_delete)%></a>
+    <a style="margin-left : 6px;" class="btn pull-left btn-danger" href="/developers/projects/<%= project1.id %>/destroy" onclick="return confirm('<%=t(:confirm)%>');"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
   <% end %>
   <br />
 
@@ -93,14 +93,13 @@
   <br />
   <% if I18n.locale == :ar %>
     <a class="btn pull-left" href="/developers/projects/<%= project2.id %>/edit"><i class="icon-edit"></i><%= t(:projects_index_edit)%></a>
-  <% else %>
     <a class="btn pull-right" href="/developers/projects/<%= project2.id %>/edit"><i class="icon-edit"></i><%= t(:projects_index_edit)%></a>
   <% end %>
 
   <% if I18n.locale == :ar %>
-    <a class="btn pull-left" href="/developers/projects/<%= project1.id %>/destroy"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
+    <a style="margin-left : 6px;" class="btn pull-left btn-danger" href="/developers/projects/<%= project1.id %>/destroy" onclick="return confirm('<%=t(:confirm)%>');"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
   <% else %>
-    <a class="btn pull-right" href="/developers/projects/<%= project1.id %>/destroy"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
+    <a style="margin-left : 6px;" class="btn pull-left btn-danger" href="/developers/projects/<%= project1.id %>/destroy" onclick="return confirm('<%=t(:confirm)%>');"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
   <% end %>
   <br />
                 </div>
