--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -136,6 +136,17 @@
       <div class="well" style="width:1100px; height:480px">
 
         <div class="Facebook" style="width: 344px;margin-right: auto;margin-left: auto;">
+          <% if Authentication.exists?(gamer_id: current_gamer.id, provider: "facebook") %>
+          <img alt="Facebook" class="border-none" src="/assets/facebook_logo.png" width="100" />
+          <span font='20' style="position:relative; padding:40px;">
+          <%= link_to t(:remove_connection), "/authentications/remove_facebook_connection" %>
+          </span>
+          <% else %>
+          <img alt="Facebook" class="border-none" src="/assets/facebook_logo.png" width="100px" height="100px" />
+          <span font='20' style="position:relative; padding:40px;">
+            <%= link_to t(:connect_to_facebook), "/auth/facebook" %> 
+          </span>
+          <% end %>
         </div>
 
         <div class="Twitter" style="width: 344px;margin-right: auto;margin-left: auto;">
