--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -253,8 +253,13 @@ function setButtons(){
   function setPopoverAttributes(){
     wordsListPopoverContent = "<%= t(:words_list_popover_content) %>";
     wordsListPopoverTitle = "<%= t(:words_list_popover_title) %>";
-    // wordLabelPopoverContent = "<%= t(:word_label_popover_content) %>";
-    // wordLablePopoverTitle = "<%= t(:word_label_popover_title) %>";
+    wordLabelPopoverContent = "<%= t(:word_label_popover_content) %>";
+    wordLabelPopoverTitle = "<%= t(:word_label_popover_title) %>";
+    tablePopoverContent = "<%= t(:table_popover_content) %>"
+    tablePopoverTitle = "<%= t(:table_popover_title) %>"
+    clickedButtonPopoverContent = "<%= t(:clicked_button_popover_content) %>";
+    clickedButtonPopoverTitle = "<%= t(:clicked_button_popover_title) %>";
+    clickedButtonPopoverButton = "<%= t(:clicked_button_popover_button) %>";
   }
 
 </script>
@@ -294,7 +299,7 @@ function setButtons(){
     <div class="zone" id="zone">
       <% end %> 
     <div class="divaya">
-    <h2 class="lang-header">إختر اللغة التي تريد اللعب بها</h2><br>
+    <h2 class="lang-header"><%= t(:pick_lang) %></h2><br>
     <div class="game-lang">
       
       <div id="exposedEngBtnDiv"><button data-trigger="manual" data-content="<%= t(:english_popover_content) %>" data-placement="left" data-title="<%= t(:english_popover_title) %>" data-html="true" id = "eng-btn" class="btn btn-info eng-btn" onclick="setLang(0)"><%= t(:english_button) %></button></div><br><br><br><br>
