--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -264,8 +264,8 @@
 <% end %>
 
 <% if !@search_keyword.blank? %>
-	<div class="alert alert-success" id="report_success" style="margin-bottom: 2px; display:none;">
-		<span><%= t(:report_sent_success) %></span>
+	<div class="alert alert-success" id="report_success" style="display:none;">
+		<div style="text-align:center;"><%= t(:report_sent_success) %></div>
 	</div>
 	<a href="#report_modal" role="button" class="btn" onClick="modalToggle()" id="LaunchDemo"><%= t(:report) %></a>
 
