[348][NW] fix documentation

--- a/arability/app/views/admin/list-trophies.html.erb
+++ b/arability/app/views/admin/list-trophies.html.erb
@@ -42,7 +42,7 @@
                 </div>
                 <span>المستوى: <%= t.level %></span>
                 <span>مجموع النقاط: <%= t.score %></span>
-                <span><a href="#myModalTrophy" data-href="/admin/delete_trophy?id=<%= t.id %>" role="button" class="edit-link-trophy" data-toggle="modal">مسح</a></span>
+                <span><a href="#myModalTrophy" data-href="/admin/delete/trophy?id=<%= t.id %>" role="button" class="edit-link-trophy" data-toggle="modal">مسح</a></span>
               </div>
             <% end %>
           <% else %>
