[issue #167][WIP][fixing my arabic]

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -117,7 +117,7 @@
 
 function setButtons(){
     <% if I18n.locale == :ar %>
-    gameButtonClear = '<button id="btn-clear" class="btn btn-success" onclick="clearWord()">مسح الكلمة</button>';
+    gameButtonClear = '<button id="btn-clear" class="btn btn-success" onclick="clearWord()">حذف الكلمة</button>';
     gameButtonRestart = '<a id="btn-restart" class="btn btn-success" href="/game">إعادة اللعبة</a>';
     continuePlayingBtn = "الاستمرار في اللعب"
     <% else %>
