[Issue #164][Finished] Fixed method name to follow conventions

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -77,7 +77,7 @@
   }
   function getPrizes(level, score) {
     clear();
-    request_string = "/games/getprizes/?level=" + level + "&score=" + score;
+    request_string = "/games/get_prizes/?level=" + level + "&score=" + score;
     $.get(request_string);
   }
   function getScore() {
@@ -130,7 +130,7 @@ function setButtons(){
 
   function getPrizes(level, score) {
     clear();
-    request_string = "/games/getprizes/?level=" + level + "&score=" + score;
+    request_string = "/games/get_prizes/?level=" + level + "&score=" + score;
     $.get(request_string);
   }
 
