--- a/arability/app/views/admin/add_trophy.html.erb
+++ b/arability/app/views/admin/add_trophy.html.erb
@@ -12,40 +12,40 @@
 								</a>
 							</legend>
 							<input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token">
-							<div class="control-group<%= flash[:error] && flash[:errortype] == 'addtrophy' && flash[:error][:name]? ' error' : ''%>">
+							<div class="control-group<%= flash[:error] && flash[:error][:name]? ' error' : ''%>">
 								<label class="control-label" for="inputName">إسم الانجاز</label>
 								<div class="controls">
-									<input type="text" id="inputName" placeholder="إسم الانجاز" name="name" value="<%= @fargs && @fargs[:addtrophy]? @fargs[:addtrophy][:name] : ''%>" class="span4">
-									<% if flash[:error] && flash[:errortype] == 'addtrophy' && flash[:error][:name] %>
+									<input type="text" id="inputName" placeholder="إسم الانجاز" name="name" value="<%= @name %>" class="span4">
+									<% if flash[:error] && flash[:error][:name] %>
 										<% flash[:error][:name].each do |er| %>
 											<span class="help-block"><%= er %></span>
 										<% end %>
 									<% end %>
 								</div>
 							</div>
-							<div class="control-group<%= flash[:error] && flash[:errortype] == 'addtrophy' && flash[:error][:level]? ' error' : ''%>">
+							<div class="control-group<%= flash[:error] && flash[:error][:level]? ' error' : ''%>">
 								<label class="control-label" for="inputScore">المستوى</label>
 								<div class="controls">
-									<input type="text" id="inputScore" placeholder="المستوى المطلوب للحصول على الانجاز" name="level" value="<%= @fargs && @fargs[:addtrophy]? @fargs[:addtrophy][:level] : ''%>" class="span4">
-									<% if flash[:error] && flash[:errortype] == 'addtrophy' && flash[:error][:level] %>
+									<input type="text" id="inputScore" placeholder="المستوى المطلوب للحصول على الانجاز" name="level" value="<%= @level %>" class="span4">
+									<% if flash[:error] && flash[:error][:level] %>
 										<% flash[:error][:level].each do |er| %>
 											<span class="help-block"><%= er %></span>
 										<% end %>
 									<% end %>
 								</div>
 							</div>
-							<div class="control-group<%= flash[:error] && flash[:errortype] == 'addtrophy' && flash[:error][:score]? ' error' : ''%>">
+							<div class="control-group<%= flash[:error] && flash[:error][:score]? ' error' : ''%>">
 								<label class="control-label" for="inputRank">مجموع النقاط</label>
 								<div class="controls">
-									<input type="text" id="inputRank" placeholder="مجموع النقاط المطلوب للحصول على الانجاز" name="score" value="<%= @fargs && @fargs[:addtrophy]? @fargs[:addtrophy][:score] : ''%>" class="span4">
-									<% if flash[:error] && flash[:errortype] == 'addtrophy' && flash[:error][:score] %>
+									<input type="text" id="inputRank" placeholder="مجموع النقاط المطلوب للحصول على الانجاز" name="score" value="<%= @score %>" class="span4">
+									<% if flash[:error] && flash[:error][:score] %>
 										<% flash[:error][:score].each do |er| %>
 											<span class="help-block"><%= er %></span>
 										<% end %>
 									<% end %>
 								</div>
 							</div>
-							<div class="control-group<%= flash[:error] && flash[:errortype] == 'addtrophy' && (flash[:error][:image] || flash[:error][:image_content_type] || flash[:error][:image_file_size])? ' error' : ''%>">
+							<div class="control-group<%= flash[:error] && (flash[:error][:image] || flash[:error][:image_content_type] || flash[:error][:image_file_size])? ' error' : ''%>">
 								<label class="control-label">الصورة</label>
 								<div class="controls">
 									<div class="uploader-controls">
@@ -61,17 +61,17 @@
 										</div>
 									</div>
 									<br>
-									<% if flash[:error] && flash[:errortype] == 'addtrophy' && flash[:error][:image] %>
+									<% if flash[:error] && flash[:error][:image] %>
 										<% flash[:error][:image].each do |er| %>
 											<span class="help-block"><%= er %></span>
 										<% end %>
 									<% end %>
-									<% if flash[:error] && flash[:errortype] == 'addtrophy' && flash[:error][:image_content_type] %>
+									<% if flash[:error] && flash[:error][:image_content_type] %>
 										<% flash[:error][:image_content_type].each do |er| %>
 											<span class="help-block"><%= er %></span>
 										<% end %>
 									<% end %>
-									<% if flash[:error] && flash[:errortype] == 'addtrophy' && flash[:error][:image_file_size] %>
+									<% if flash[:error] && flash[:error][:image_file_size] %>
 										<% flash[:error][:image_file_size].each do |er| %>
 											<span class="help-block"><%= er %></span>
 										<% end %>
