--- a/arability/app/views/admin/add_word.html.erb
+++ b/arability/app/views/admin/add_word.html.erb
@@ -11,7 +11,7 @@
 									إضافة كلمة جديدة
 								</a>
 							</legend>
-							<% if flash[:successtype] && flash[:successtype] == "addword" && flash[:success] %>
+							<% if flash[:success] %>
 								<div class="alert alert-success">
 						    	<button type="button" class="close" data-dismiss="alert">&times;</button>
 						    	<div>
@@ -20,12 +20,12 @@
 						  	</div>
 							<% end %>
 							<input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token">
-							<div class="control-group<%= flash[:error] && flash[:errortype] == 'addword' && flash[:error][:name]? ' error' : ''%>">
+							<div class="control-group<%= flash[:error] && flash[:error][:name]? ' error' : ''%>">
 								<label class="control-label" for="inputkeyword">الكلمة</label>
 								<div class="controls">
-									<input type="text" id="inputkeyword" name="keyword[name]" placeholder="الكلمة" value="<%=@fargs && @fargs[:keyword]? @fargs[:keyword][:name] : ''%>" class="span4">
+									<input type="text" id="inputkeyword" name="keyword[name]" placeholder="الكلمة" value="<%= @name %>" class="span4">
 									<button type="submit" class="btn btn-primary pull-left">إضافة الكلمة</button>
-									<% if flash[:error] && flash[:errortype] == 'addword' && flash[:error][:name] %>
+									<% if flash[:error] && flash[:error][:name] %>
 											<span class="help-block">يجب ادخال كلمة باللغة العربية او الانجليزية</span>
 									<% end %>
 								</div>
