--- a/arability/app/views/games/_get_trophies.html.erb
+++ b/arability/app/views/games/_get_trophies.html.erb
@@ -3,22 +3,18 @@
 </script>
 <div class="award-zone" >
   <div class="won">
-    <% if I18n.locale == :en %>
-      <% if @bool_won_prizes %>
-        <a class="pull-right btn btn-success" style="padding: 5px; margin-right: 12px; margin-top: 28px;" onclick="getPrizes(<%= @level %>, <%= @score %>)"><%= t(:to_prizes) %></a>
-      <% else %>
-        <a class="pull-right btn btn-success" style="padding: 5px; margin-right: 12px; margin-top: 28px;" onclick="nextLevel()"><%= t(:to_next_level) %></a>
-      <% end %>
+    <% arabic_class = "pull-left btn btn-success" %>
+    <% english_class = "pull-right btn btn-success" %>
+    <% english_style = "padding: 5px; margin-right: 12px; margin-top: 28px;" %>
+    <% arabic_style = "padding: 5px; margin-left:28px; margin-top: 28px;" %>
+    <% if @bool_won_prizes %>
+      <a class="<%= I18n.locale == :en ? english_class : arabic_class %>" style="<%= I18n.locale == :en ? english_style : arabic_style %>" onclick="getPrizes(<%= @level %>, <%= @score %>)"><%= t(:to_prizes) %></a>
     <% else %>
-     <% if @bool_won_prizes %>
-        <a class="pull-left btn btn-success" style="padding: 5px; margin-leftt: 28px; margin-top: 28px;" onclick="getPrizes(<%= @level %>, <%= @score %>)"><%= t(:to_prizes) %></a>
-      <% else %>
-        <a class="pull-left btn btn-success" style="padding: 5px; margin-left:28px; margin-top: 28px;" onclick="nextLevel()"><%= t(:to_next_level) %></a>
-      <% end %>
+      <a class="<%= I18n.locale == :en ? english_class : arabic_class %>" style="<%= I18n.locale == :en ? english_style : arabic_style %>" onclick="nextLevel()"><%= t(:to_next_level) %></a>
     <% end %>
     <h3 class="title-head"><%= t(:you_have_score) %><br><br> <%= @score %><br><br><%= t(:share_your_score) %><br><br><a href="https://twitter.com/share" class="twitter-share-button" data-text="لقد حصلت على <%= @score %> نقطة" data-via="SmartSoft2013">Tweet</a><br><a style="margin-left: -24px" target="_blank" href="/share_on_facebook/?score=<%= @score %>  "><img src="/assets/fb.png"></a></h3>
   </div>
-  <% if @won_trophies.size > 0 %>
+  <% if @won_trophies.blank? %>
   <div class="won">
     <h3 class="title-head" style="border-top: none;"><%= t(:you_have_won_these_trophies) %></h3>
      <% @won_trophies.each do |trophy| %>
