--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -54,10 +54,23 @@
   <% end %>
   
   <% if I18n.locale == :ar %>
-   <a style="margin-left : 6px;" class="btn pull-left btn-danger" href="/developers/projects/<%= project1.id %>/destroy" onclick="return confirm('<%=t(:confirm)%>');"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
+   <a style="margin-left : 6px;" href="#delete_modal" role="button" class="btn pull-left btn-danger" onClick="modalToggle()" id="LaunchDemo"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
   <% else %>
-    <a style="margin-left : 6px;" class="btn pull-left btn-danger" href="/developers/projects/<%= project1.id %>/destroy" onclick="return confirm('<%=t(:confirm)%>');"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
+  <a style="margin-right : 6px;" href="#delete_modal" role="button" class="btn pull-right btn-danger" onClick="modalToggle()" id="LaunchDemo"> <i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
   <% end %>
+    <div id="delete_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <h3 id="modal_label"><%= t(:delete) %></h3>
+      </div>
+      <div class="modal-body">
+        <h4><%= t(:confirm)%></h4>
+      </div>
+      <div class="modal-footer">
+        <button class="btn" data-dismiss="modal"><%= t(:close_delete) %></button>
+        <%= link_to t(:submit_delete), delete_path(project1.id),:class => "btn btn-danger" %>
+      </div>
+    </div>
   <br />
 
             </div>
@@ -96,11 +109,24 @@
     <a class="btn pull-right" href="/developers/projects/<%= project2.id %>/edit"><i class="icon-edit"></i><%= t(:projects_index_edit)%></a>
   <% end %>
 
-  <% if I18n.locale == :ar %>
-    <a style="margin-left : 6px;" class="btn pull-left btn-danger" href="/developers/projects/<%= project1.id %>/destroy" onclick="return confirm('<%=t(:confirm)%>');"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
+   <% if I18n.locale == :ar %>
+   <a style="margin-left : 6px;" href="#delete_modal" role="button" class="btn pull-left btn-danger" onClick="modalToggle()" id="LaunchDemo"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
   <% else %>
-    <a style="margin-left : 6px;" class="btn pull-left btn-danger" href="/developers/projects/<%= project1.id %>/destroy" onclick="return confirm('<%=t(:confirm)%>');"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
+  <a style="margin-right : 6px;" href="#delete_modal" role="button" class="btn pull-right btn-danger" onClick="modalToggle()" id="LaunchDemo"> <i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
   <% end %>
+    <div id="delete_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <h3 id="modal_label"><%= t(:delete) %></h3>
+      </div>
+      <div class="modal-body">
+        <h4><%= t(:confirm)%></h4>
+      </div>
+      <div class="modal-footer">
+        <button class="btn" data-dismiss="modal"><%= t(:close_delete) %></button>
+        <%= link_to t(:submit_delete), delete_path(project1.id),:class => "btn btn-danger" %>
+      </div>
+    </div>
   <br />
                 </div>
               </td>
@@ -206,3 +232,7 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+<%= render "delete.js" %>
+</script>
