--- a/arability/app/views/games/_get_trophies.html.erb
+++ b/arability/app/views/games/_get_trophies.html.erb
@@ -28,7 +28,7 @@
               <%= trophy.name %>
             </div>
             <div class="award-new-req">
-              <%= t(:level) %> <%= troph.level %>
+              <%= t(:level) %> <%= trophy.level %>
             </div>
             <div class="award-new-req">
               <%= t(:score) %> <%= trophy.score %>
