--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -1,7 +1,8 @@
 <div class="row">
 	<div class="span12">
 		<%= form_tag(search_path, :method => "post", :class => "form-search form-horizontal", :style => "margin-bottom:0px;") do %>
-			<input type="hidden" value="<%= @project_id %>" name="project_id">
+			<input type="hidden" value="<%= @user_id %>" name="user_id">
+			<input type="hidden" value="<%= @projects %>" name="projects">
 			<%= content_tag(:div, :class => 'input-append') do %>
 				<% text_field_tag(:search, @search_keyword,
 													:placeholder => t(:search_here),
@@ -147,6 +148,25 @@
 		<div class="accordion-heading">
 			<span class="accordion-toggle" data-toggle="false" href="#collective">
 				<span><%= t(:view_collectives) %><i><b><%= @search_keyword %></b></i></span>
+				<span style="margin-right:10px;">
+					<i class="icon-plus-sign">
+					</i> 
+					<%= t(:add_to) %>
+				</span>
+				<div style="display:inline;">
+				<a class="btn dropdown-toggle btn-mini" data-toggle="dropdown" style="position:relative;" href="#">
+   					<%= t(:project) %>
+    				<span class="caret"></span>
+  				</a>
+  				<ul class="dropdown-menu" align = "center" style="position:relative;">
+    				<% @projects.each do |project| %>
+    					<li>
+    						 <%= project.name %>
+    					</li>
+    				<% end %>
+  				</ul>
+  				</div>
+
 			</span>
 		</div>
 		<div id="collective" class="accordion-body collapse in">
@@ -196,9 +216,6 @@
 												}
 		                  </script>
 								</button>
-								<%= button_tag(:type => "submit", :class => "btn btn-mini",:style => "display:inline;") do %>
-								<%= link_to t(:add_to_project), {action: "add_word", controller: "projects", project_id: @project_id, synonym_id: synonym.id, keyword: @search_keyword}, {style:"color:#000000", class: "css_class"}  %>
-								<% end %>
 							</div>
 							<script type="text/javascript">
 								<% if I18n.locale == :ar %>
