[Issue #165][Finished] finished fixing method names

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -103,7 +103,7 @@
       cache = document.getElementById("zone").innerHTML;
     }
     clear();
-    $.get("/games/showtrophies");
+    $.get("/games/show_trophies");
   }
   // function  setLevelTitle(){
   //   <% if I18n.locale==:ar %>
