[Issue #370][WIP] Added table that renders keywords and their synonyms

--- a/arability/app/assets/stylesheets/application.css.scss
+++ b/arability/app/assets/stylesheets/application.css.scss
@@ -64,3 +64,11 @@ div.d5pxup input {
   min-width: 232px;
   min-width: 232px;
 }
+
+#key {
+  margin:0px;
+  min-height:35px;
+  max-height:35px;
+  min-width: 250px;
+  min-width: 250px;
+}
